fixed some layout bugs and updated get app imgs

--- a/style.css
+++ b/style.css
@@ -112,14 +112,15 @@ body {
 .download {
   display: flex;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   padding: 1rem;
 }
 
 .app-download {
   height: 3rem;
-  width: 10rem;
+  min-width: 10.2rem;
+  margin: 0 1rem;
   background-size: cover;
 }
 
@@ -133,13 +134,13 @@ body {
 
 /* media queries*/
 
-@media (max-width: 1300px) {
+@media (max-width: 1100px) {
   .instagram-wrapper {
     width: 90%;
   }
 }
 
-@media (max-width: 870px) {
+@media (max-width: 725px) {
   body {
     background-color: white;
   }
